finalized tracking  and plotting of various metaparameters

--- a/python/Jupyter_Notebooks/Metadata_Processing.ipynb
+++ b/python/Jupyter_Notebooks/Metadata_Processing.ipynb
@@ -114,15 +114,15 @@
    "source": [
     "def get_audio_quality_annotations():\n",
     "    PATH = \"data/Coswara-Data/annotations/\"\n",
-    "    recording_quality_files = {\"audio_quality_deep_breathing\":  PATH + \"breathing-deep_labels_pravinm.csv\",\n",
-    "                               \"audio_quality_shallow_breathing\": PATH + \"breathing-shallow_labels_pravinm.csv\",\n",
-    "                               \"audio_quality_heavy_cough\": PATH + \"cough-heavy_labels_debottam.csv\",\n",
-    "                               \"audio_quality_shallow_cough\": PATH + \"cough-shallow_labels_debarpan.csv\",\n",
-    "                               \"audio_quality_counting_fast\": PATH + \"counting-fast_labels_pravinm.csv\",\n",
-    "                               \"audio_quality_counting_normal\": PATH + \"counting-normal_labels_pravinm.csv\",\n",
-    "                               \"audio_quality_vowel_a\": PATH + \"vowel-a_labels_debarpan.csv\",\n",
-    "                               \"audio_quality_vowel_e\": PATH + \"vowel-e_labels_debottam.csv\",\n",
-    "                               \"audio_quality_vowel_o\": PATH + \"vowel-o_labels_updated_neeraj.csv\"}\n",
+    "    recording_quality_files = {\"audio_quality_breathing-deep\":  PATH + \"breathing-deep_labels_pravinm.csv\",\n",
+    "                               \"audio_quality_breathing-shallow\": PATH + \"breathing-shallow_labels_pravinm.csv\",\n",
+    "                               \"audio_quality_cough-heavy\": PATH + \"cough-heavy_labels_debottam.csv\",\n",
+    "                               \"audio_quality_cough-shallow\": PATH + \"cough-shallow_labels_debarpan.csv\",\n",
+    "                               \"audio_quality_counting-fast\": PATH + \"counting-fast_labels_pravinm.csv\",\n",
+    "                               \"audio_quality_counting-normal\": PATH + \"counting-normal_labels_pravinm.csv\",\n",
+    "                               \"audio_quality_vowel-a\": PATH + \"vowel-a_labels_debarpan.csv\",\n",
+    "                               \"audio_quality_vowel-e\": PATH + \"vowel-e_labels_debottam.csv\",\n",
+    "                               \"audio_quality_vowel-o\": PATH + \"vowel-o_labels_updated_neeraj.csv\"}\n",
     "\n",
     "    df = pd.DataFrame({\"user_id\":participant_ids})\n",
     "    for (feature_name, file_path) in recording_quality_files.items():\n",
@@ -639,15 +639,15 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>user_id</th>\n",
-       "      <th>audio_quality_deep_breathing</th>\n",
-       "      <th>audio_quality_shallow_breathing</th>\n",
-       "      <th>audio_quality_heavy_cough</th>\n",
-       "      <th>audio_quality_shallow_cough</th>\n",
-       "      <th>audio_quality_counting_fast</th>\n",
-       "      <th>audio_quality_counting_normal</th>\n",
-       "      <th>audio_quality_vowel_a</th>\n",
-       "      <th>audio_quality_vowel_e</th>\n",
-       "      <th>audio_quality_vowel_o</th>\n",
+       "      <th>audio_quality_breathing-deep</th>\n",
+       "      <th>audio_quality_breathing-shallow</th>\n",
+       "      <th>audio_quality_cough-heavy</th>\n",
+       "      <th>audio_quality_cough-shallow</th>\n",
+       "      <th>audio_quality_counting-fast</th>\n",
+       "      <th>audio_quality_counting-normal</th>\n",
+       "      <th>audio_quality_vowel-a</th>\n",
+       "      <th>audio_quality_vowel-e</th>\n",
+       "      <th>audio_quality_vowel-o</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -695,27 +695,27 @@
        "</div>"
       ],
       "text/plain": [
-       "                        user_id  audio_quality_deep_breathing  \\\n",
+       "                        user_id  audio_quality_breathing-deep  \\\n",
        "0  00xKcQMmcAhX8CODgBBLOe7Dm0T2                             2   \n",
        "1  01GtHP1FUbXKdWEUwApFdusuO773                             0   \n",
        "2  01n0u9YSkXQSkmN45J65eigyCMC3                             0   \n",
        "\n",
-       "   audio_quality_shallow_breathing  audio_quality_heavy_cough  \\\n",
+       "   audio_quality_breathing-shallow  audio_quality_cough-heavy  \\\n",
        "0                                2                        2.0   \n",
        "1                                0                        NaN   \n",
        "2                                1                        2.0   \n",
        "\n",
-       "   audio_quality_shallow_cough  audio_quality_counting_fast  \\\n",
+       "   audio_quality_cough-shallow  audio_quality_counting-fast  \\\n",
        "0                          2.0                          2.0   \n",
        "1                          NaN                          NaN   \n",
        "2                          1.0                          2.0   \n",
        "\n",
-       "   audio_quality_counting_normal  audio_quality_vowel_a  \\\n",
+       "   audio_quality_counting-normal  audio_quality_vowel-a  \\\n",
        "0                            2.0                    2.0   \n",
        "1                            NaN                    NaN   \n",
        "2                            2.0                    2.0   \n",
        "\n",
-       "   audio_quality_vowel_e  audio_quality_vowel_o  \n",
+       "   audio_quality_vowel-e  audio_quality_vowel-o  \n",
        "0                      2                    2.0  \n",
        "1                      1                    NaN  \n",
        "2                      2                    2.0  "
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "f27a8759",
    "metadata": {},
    "outputs": [
@@ -743,21 +743,21 @@
        "(2.0    1927\n",
        " 1.0     167\n",
        " 0.0     139\n",
-       " Name: audio_quality_heavy_cough, dtype: int64,\n",
+       " Name: audio_quality_cough-heavy, dtype: int64,\n",
        " 2    1906\n",
        " 0     472\n",
        " 1     368\n",
-       " Name: audio_quality_shallow_breathing, dtype: int64)"
+       " Name: audio_quality_breathing-shallow, dtype: int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# qudio quality distribution of two columns\n",
-    "audio_quality_annotations.audio_quality_heavy_cough.value_counts(), audio_quality_annotations.audio_quality_shallow_breathing.value_counts()"
+    "audio_quality_annotations[\"audio_quality_cough-heavy\"].value_counts(), audio_quality_annotations[\"audio_quality_breathing-shallow\"].value_counts()"
    ]
   },
   {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "941fb090",
    "metadata": {},
    "outputs": [
@@ -805,7 +805,7 @@
        "Name: covid_health_status, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "541e267e",
    "metadata": {},
    "outputs": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "b5584559",
    "metadata": {
     "scrolled": true
@@ -1084,7 +1084,7 @@
        "4                     1.099  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "94f38f90",
    "metadata": {},
    "outputs": [
@@ -1187,7 +1187,7 @@
        "2  01n0u9YSkXQSkmN45J65eigyCMC3              False                     0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "cc4f62fc",
    "metadata": {},
    "outputs": [
@@ -1259,15 +1259,15 @@
       " 34  chronic_lung_disease                 44 non-null     object \n",
       " 35  pneumonia                            45 non-null     object \n",
       " 36  covid_label                          2519 non-null   float64\n",
-      " 37  audio_quality_deep_breathing         2746 non-null   int64  \n",
-      " 38  audio_quality_shallow_breathing      2746 non-null   int64  \n",
-      " 39  audio_quality_heavy_cough            2233 non-null   float64\n",
-      " 40  audio_quality_shallow_cough          2232 non-null   float64\n",
-      " 41  audio_quality_counting_fast          2233 non-null   float64\n",
-      " 42  audio_quality_counting_normal        2233 non-null   float64\n",
-      " 43  audio_quality_vowel_a                2233 non-null   float64\n",
-      " 44  audio_quality_vowel_e                2746 non-null   int64  \n",
-      " 45  audio_quality_vowel_o                2232 non-null   float64\n",
+      " 37  audio_quality_breathing-deep         2746 non-null   int64  \n",
+      " 38  audio_quality_breathing-shallow      2746 non-null   int64  \n",
+      " 39  audio_quality_cough-heavy            2233 non-null   float64\n",
+      " 40  audio_quality_cough-shallow          2232 non-null   float64\n",
+      " 41  audio_quality_counting-fast          2233 non-null   float64\n",
+      " 42  audio_quality_counting-normal        2233 non-null   float64\n",
+      " 43  audio_quality_vowel-a                2233 non-null   float64\n",
+      " 44  audio_quality_vowel-e                2746 non-null   int64  \n",
+      " 45  audio_quality_vowel-o                2232 non-null   float64\n",
       " 46  Unnamed: 0                           2746 non-null   int64  \n",
       " 47  duration_original_cough-heavy        2746 non-null   float64\n",
       " 48  duration_original_cough-shallow      2746 non-null   float64\n",
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "940ee6d5",
    "metadata": {},
    "outputs": [],
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "a973e2ce-a597-4596-b773-380c3b069488",
    "metadata": {},
    "outputs": [],
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "628c8dff-fcd4-41da-80d1-c4cb53a7728a",
    "metadata": {},
    "outputs": [],
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "id": "54601b83-1019-449f-8b68-c9a608198662",
    "metadata": {},
    "outputs": [],
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
    "id": "1f26eead-b22d-4771-9ba6-0d6078651011",
    "metadata": {},
    "outputs": [],
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "id": "cd70c45f-6304-452d-b688-982b9c5feca5",
    "metadata": {},
    "outputs": [],
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 28,
    "id": "2fe9ebdd-561b-41fd-8ac4-67fe492390c5",
    "metadata": {},
    "outputs": [
@@ -1402,7 +1402,7 @@
        " Name: covid_label, dtype: int64)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 29,
    "id": "c3c10f53-dea8-4a84-8861-8ddfeb09a314",
    "metadata": {},
    "outputs": [],
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 30,
    "id": "8d5f57e4-d57c-4a92-8e22-043be8ea118c",
    "metadata": {},
    "outputs": [
@@ -1437,7 +1437,7 @@
        "Name: recording_invalid, dtype: int64"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 31,
    "id": "5bdeab9f-15a7-44bc-93b5-bca35c8f74d9",
    "metadata": {},
    "outputs": [
@@ -1458,7 +1458,7 @@
        "(0.7894736842105263, 0.75, 0.7675070028011205)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1466,6 +1466,14 @@
    "source": [
     "3000/3800, 300/400, 274/357"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb81706e-440c-42ba-96d5-3c28ab67e06c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
