--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -20,13 +28,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-02-20_brogrammers_brogrammers_new_feature_set_class_train_val_test_split.pickle\n",
+      "\n",
+      "Parameters used for finding the best performing epoch:\n",
+      "           metric_used:                   auc_roc\n",
+      "           smoothing:                     10\n",
+      "           ignore_first_n_epochs:         10\n",
+      "\n",
+      "Datasets used:\n",
+      "brogrammers_new\n",
+      "           dataset_class:                 <class 'datasets.BrogrammersMFCCDataset'>\n",
+      "           participants_file:             2023_02_20_brogrammers_settings_new.pickle\n",
+      "           augmented_files:               ['2023_02_20_brogrammers_settings_new_augmented.pickle']\n",
+      "           train_set_label_counts:        label '0': 2134  -  label '1': 1305\n",
+      "           types_of_recording:            cough-heavy\n",
+      "\n",
+      "Audio Processing Parameters:\n",
+      "           type_of_features:              mfcc\n",
+      "           n_time_steps:                  259\n",
+      "           n_features:                    15\n",
+      "           sample_rate:                   22050\n",
+      "           n_fft:                         2048\n",
+      "           window_length:                 2048\n",
+      "           hop_size:                      512\n",
+      "           fmin:                          0\n",
+      "           fmax:                          11025\n",
+      "           hop_size_ms:                   23.22\n",
+      "           window_length_ms:              92.88\n",
+      "           duration_seconds:              6.01\n",
+      "           fft_res_hz:                    10.77\n",
+      "\n",
+      "Predetermined Time Domain Augmentations:\n",
+      "           AddGaussianNoise:              'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.02\n",
+      "           PitchShift:                    'probability': 0.8, 'min_semitones': -3, 'max_semitones': 3\n",
+      "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.85, 'max_rate': 1.15\n",
+      "           Gain:                          'probability': 0.8, 'min_gain_in_db': -40, 'max_gain_in_db': 16\n",
+      "           model:                         BrogrammersModel\n",
+      "           optimizer:                     Adam \n",
+      "           loss_function:                 BCEWithLogitsLoss\n",
+      "\n",
+      "Tracker contains:\n",
+      "           parameter runs:                6\n",
+      "           folds per run:                 5\n",
+      "           epochs:                        100\n"
+     ]
+    }
+   ],
    "source": [
     "tracker = load_tracker()\n",
-    "tracker.get_feature_set_parameters_df(show_augmentations=True)"
+    "tracker.summarize(detail=\"compact\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51c3c9b9b26847af979d517c700410c0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Checkbox(value=False, description='dataset_and_model'), Checkbox(value=True, description…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "_ = widgets.interact(tracker.get_data_and_model_params, dataset_and_model=False, audio_processing=True, augmentations=False)"
    ]
   },
   {
@@ -46,10 +129,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Parameters used for finding the best performing epoch:\n",
+      "           metric_used:                   auc_roc\n",
+      "           smoothing:                     10\n",
+      "           ignore_first_n_epochs:         10\n"
+     ]
+    }
+   ],
    "source": [
     "tracker.compute_overall_metrics(smooth_n_samples=10, ignore_first_n_epochs=10, metric_used_for_performance_analysis=\"auc_roc\")"
    ]
@@ -70,10 +165,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4f0230f89e0641b98d83df687b64bae1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='sort_descending_by_metric', options=('auc_roc', 'loss', 'accuracy'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def sortby(sort_descending_by_metric, highlight_hyperparameters, show_full_df, **kwargs):\n",
     "    # thresholds = {\"auc_roc\": auc_threshold}\n",
@@ -103,10 +213,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "418113a36f1343989f2983c95e0e4bf6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='metric', options=('auc_roc', 'loss', 'accuracy', 'f1_score', 'auc_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# hyperparameters = (list(tracker.crossval_runs[0].parameters.keys()))\n",
     "_ = widgets.interact(tracker.boxplot_run_statistics, metric=tracker.metrics_used,\n",
@@ -129,43 +254,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "de9ec0ebdc904ab7ac129da3949370ed",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='mode', options=('eval', 'train'), value='eval'), Dropdown(descript…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "_ = widgets.interact(tracker.show_all_runs, \n",
+    "                     mode=[\"eval\", \"train\"], \n",
+    "                     metric=tracker.metrics_used, \n",
+    "                     n_samples_for_smoothing=widgets.IntSlider(value=tracker.performance_eval_params[\"smoothing\"], min=1, max=15), \n",
+    "                     show_separate_folds=False, \n",
+    "                     show_std_area_plot=False,\n",
+    "                     show_n_best_runs=widgets.IntSlider(value=5, min=1, max=tracker.n_hyperparameter_runs),\n",
+    "                     color_by_hyperparameter=[None, *tracker.hyperparameters])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ab612294-eca8-489d-8743-794ae7278edf",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def get_list_of_best_n_runs(sort_by_metric=True, metric=\"auc_roc\"):\n",
+    "    # this way, the dropdown menu of run_id below is sorted by metric performance specified\n",
+    "    if sort_by_metric:\n",
+    "        hyperparameter_settings = [str(tracker.crossval_runs[idx].parameters) for idx in tracker.get_indices_of_best_n_runs(tracker.n_hyperparameter_runs, metric)]\n",
+    "    else:\n",
+    "        hyperparameter_settings = tracker.run_ids\n",
+    "    return hyperparameter_settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d36c09dbd1b6429188d29ae116309507",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '32', 'lr': '5e-05', 'wd': '0.0001', …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "_ = widgets.interact(tracker.show_single_run, \n",
+    "                 run_id=get_list_of_best_n_runs(sort_by_metric=True, metric=\"auc_roc\"),\n",
     "                 mode=[\"eval\", \"train\"], \n",
     "                 metric=tracker.metrics_used, \n",
-    "                 n_samples_for_smoothing=widgets.IntSlider(value=tracker.performance_eval_params[\"smoothing\"], min=1, max=10), \n",
-    "                 show_separate_folds=False, \n",
-    "                 show_std_area_plot=True,\n",
-    "                 show_n_best_runs=widgets.IntSlider(value=5, min=1, max=tracker.n_hyperparameter_runs))"
+    "                 n_samples_for_smoothing=widgets.IntSlider(value=tracker.performance_eval_params[\"smoothing\"], min=1, max=15), \n",
+    "                 show_separate_folds=True, \n",
+    "                 show_std_area_plot=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
+   "id": "4f818736-cefe-4d84-b8d5-36f28f5e11b8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "_ = widgets.interact(tracker.show_single_run, \n",
-    "                     \n",
-    "                 run_id=tracker.run_ids,\n",
-    "                 mode=[\"eval\", \"train\"], \n",
-    "                 metric=tracker.metrics_used, \n",
-    "                 n_samples_for_smoothing=widgets.IntSlider(value=tracker.performance_eval_params[\"smoothing\"], min=1, max=10), \n",
-    "                 show_separate_folds=True, \n",
-    "                 show_std_area_plot=True)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23e205f6-8342-4672-8511-5a99c6039102",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai38",
+   "display_name": "Python (python_v3-8)",
    "language": "python",
-   "name": "ai38"
+   "name": "python_v3-8"
   },
   "language_info": {
    "codemirror_mode": {
