combine shallow/heacy breat/cough to one feature set

--- a/python/Jupyter_Notebooks/Metadata_Processing.ipynb
+++ b/python/Jupyter_Notebooks/Metadata_Processing.ipynb
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "2cb1d844",
    "metadata": {},
    "outputs": [
@@ -721,7 +721,7 @@
        "2                      2                    2.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,31 +733,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "f27a8759",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2.0    1927\n",
-       " 1.0     167\n",
-       " 0.0     139\n",
-       " Name: audio_quality_cough-heavy, dtype: int64,\n",
-       " 2    1906\n",
-       " 0     472\n",
-       " 1     368\n",
-       " Name: audio_quality_breathing-shallow, dtype: int64)"
+       "(2.0    1848\n",
+       " 1.0     248\n",
+       " 0.0     136\n",
+       " Name: audio_quality_cough-shallow, dtype: int64,\n",
+       " 2    1963\n",
+       " 0     452\n",
+       " 1     331\n",
+       " Name: audio_quality_breathing-deep, dtype: int64)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# qudio quality distribution of two columns\n",
-    "audio_quality_annotations[\"audio_quality_cough-heavy\"].value_counts(), audio_quality_annotations[\"audio_quality_breathing-shallow\"].value_counts()"
+    "audio_quality_annotations[\"audio_quality_cough-shallow\"].value_counts(), audio_quality_annotations[\"audio_quality_breathing-deep\"].value_counts()"
    ]
   },
   {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "941fb090",
    "metadata": {},
    "outputs": [
@@ -805,7 +805,7 @@
        "Name: covid_health_status, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "541e267e",
    "metadata": {},
    "outputs": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "b5584559",
    "metadata": {
     "scrolled": true
@@ -1084,7 +1084,7 @@
        "4                     1.099  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "94f38f90",
    "metadata": {},
    "outputs": [
@@ -1187,7 +1187,7 @@
        "2  01n0u9YSkXQSkmN45J65eigyCMC3              False                     0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "cc4f62fc",
    "metadata": {},
    "outputs": [
@@ -1300,6 +1300,31 @@
     "full_meta_data = pd.merge(full_meta_data, invalid_recordings_df, on=\"user_id\", how=\"outer\")\n",
     "\n",
     "full_meta_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "4fcd1eff-f253-49fc-9f0e-8eb4d18cd79f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0    1808\n",
+       "1.0     245\n",
+       "0.0      54\n",
+       "Name: audio_quality_cough-shallow, dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# removed_invalid = full_meta_data[full_meta_data.n_invalid_recordings == 0]\n",
+    "# removed_invalid[\"audio_quality_cough-shallow\"].value_counts()"
    ]
   },
   {
