include multiple instance learning model and dataset

--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-02-20_brogrammers_brogrammers_new_feature_set_class.pickle\n",
+      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-02-23_brogrammers_mfccs_3s_combined_coughs_inlcude_augments.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -44,39 +44,39 @@
       "           ignore_first_n_epochs:         10\n",
       "\n",
       "Datasets used:\n",
-      "brogrammers_new\n",
+      "mfccs_3s_combined_coughs\n",
       "           dataset_class:                 <class 'datasets.BrogrammersMFCCDataset'>\n",
-      "           participants_file:             2023_02_20_brogrammers_settings_new.pickle\n",
-      "           augmented_files:               ['2023_02_20_brogrammers_settings_new_augmented.pickle']\n",
-      "           train_set_label_counts:        label '0': 2566  -  label '1': 1595\n",
-      "           types_of_recording:            cough-heavy\n",
+      "           participants_file:             2023_02_23_mfcc_combined_coughs_3s.pickle\n",
+      "           augmented_files:               ['2023_02_23_mfcc_combined_coughs_3s_7xaugmented.pickle']\n",
+      "           train_set_label_counts:        label '0': 2154  -  label '1': 2104\n",
+      "           types_of_recording:            combined_coughs\n",
       "\n",
       "Audio Processing Parameters:\n",
       "           type_of_features:              mfcc\n",
       "           n_time_steps:                  259\n",
       "           n_features:                    15\n",
       "           sample_rate:                   22050\n",
-      "           n_fft:                         2048\n",
-      "           window_length:                 2048\n",
-      "           hop_size:                      512\n",
+      "           n_fft:                         4096\n",
+      "           window_length:                 512\n",
+      "           hop_size:                      256\n",
       "           fmin:                          0\n",
       "           fmax:                          11025\n",
-      "           hop_size_ms:                   23.22\n",
-      "           window_length_ms:              92.88\n",
-      "           duration_seconds:              6.01\n",
-      "           fft_res_hz:                    10.77\n",
+      "           hop_size_ms:                   11.61\n",
+      "           window_length_ms:              23.22\n",
+      "           duration_seconds:              3.01\n",
+      "           fft_res_hz:                    5.38\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
-      "           AddGaussianNoise:              'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.02\n",
-      "           PitchShift:                    'probability': 0.8, 'min_semitones': -3, 'max_semitones': 3\n",
-      "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.85, 'max_rate': 1.15\n",
-      "           Gain:                          'probability': 0.8, 'min_gain_in_db': -40, 'max_gain_in_db': 16\n",
+      "           AddGaussianNoise:              'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01\n",
+      "           PitchShift:                    'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2\n",
+      "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05\n",
+      "           Gain:                          'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12\n",
       "           model:                         BrogrammersModel\n",
       "           optimizer:                     Adam \n",
       "           loss_function:                 BCEWithLogitsLoss\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                6\n",
+      "           parameter runs:                10\n",
       "           folds per run:                 5\n",
       "           epochs:                        100\n"
      ]
@@ -84,19 +84,19 @@
    ],
    "source": [
     "tracker = load_tracker()\n",
-    "tracker.summarize(detail=\"compact\")\n"
+    "tracker.summarize(detail=\"compact\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fb9f6873b914a8cac626688dd8f0aeb",
+       "model_id": "659bf63edac24e12b57a7e4061fee3cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -165,14 +165,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fad82213bb6b4eabb2f8c2b287f5bb03",
+       "model_id": "71e8edd41b9e459693100877194ad556",
        "version_major": 2,
        "version_minor": 0
       },
@@ -213,14 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "606ad04f41184b45b226e08a7fc88dec",
+       "model_id": "bc2ccf75bbe54be5914a1e3109f01493",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,14 +254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "050c12aff2db48d485c93ee41add5fa1",
+       "model_id": "94f1d43fe9294db5a517bc22e7fb2e95",
        "version_major": 2,
        "version_minor": 0
       },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -304,12 +304,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "64904f0a271149c08cb67d697d2c0e2a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '32', 'lr': '0.0005', 'wd': '0.0001',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "_ = widgets.interact(tracker.show_single_run, \n",
     "                 run_id=get_list_of_best_n_runs(sort_by_metric=True, metric=\"auc_roc\"),\n",
