--- a/python/Jupyter_Notebooks/Untitled.ipynb
+++ b/python/Jupyter_Notebooks/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "7f28fab7",
    "metadata": {},
    "outputs": [
@@ -24,46 +24,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "9bdc075d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"data/Coswara_processed/pickles/2023_02_21_mfcc_breath_3s_22kHz.pickle\", \"rb\") as f:\n",
+    "with open(f\"data/Coswara_processed/pickles/2023_02_22_mfcc_combined_breaths_3s_22kHz_.pickle\", \"rb\") as f:\n",
     "    feature_set1 = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "c9355691",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'type_of_features': 'mfcc',\n",
-       " 'n_time_steps': 259,\n",
-       " 'n_features': 15,\n",
-       " 'sample_rate': 22050,\n",
-       " 'n_fft': 8192,\n",
-       " 'window_length': 512,\n",
-       " 'hop_size': 256,\n",
-       " 'fmin': 0,\n",
-       " 'fmax': 11025,\n",
-       " 'hop_size_ms': 11.61,\n",
-       " 'window_length_ms': 23.22,\n",
-       " 'duration_seconds': 3.01,\n",
-       " 'fft_res_hz': 2.69}"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Feature Set - #Participants: 2257\n",
+      "----------------------------------------------------\n",
+      "type_of_features:    mfcc\n",
+      "n_time_steps:        259\n",
+      "n_features:          15\n",
+      "sample_rate:         22050\n",
+      "n_fft:               4096\n",
+      "window_length:       512\n",
+      "hop_size:            512\n",
+      "fmin:                0\n",
+      "fmax:                11025\n",
+      "hop_size_ms:         23.22\n",
+      "window_length_ms:    23.22\n",
+      "duration_seconds:    6.01\n",
+      "fft_res_hz:          5.38\n",
+      "-------------------Augmentations--------------------\n",
+      "----------------------------------------------------\n"
+     ]
     }
    ],
    "source": [
-    "feature_set1.audio_parameters"
+    "print(feature_set1)"
    ]
   },
   {
